# generador-analizador-estadistico

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/latex/: annotated.tex  estadistica_8c.tex  estadistica_8h.tex  estadistica_8h_source.tex  files.tex  generacion_8c.tex  generacion_8h_source.tex  main_8c.tex  md__r_e_a_d_m_e.tex  ordenamiento_8c.tex  ordenamiento_8h.tex  ordenamiento_8h_source.tex  refman.tex  struct_caso_simulacion.tex  struct_nodo_bucket.tex
include/: estadistica.h  generacion.h  ordenamiento.h
src/: estadistica.c  generacion.c  main.c  ordenamiento.c
